===============================================================================
UBMoD - ChangeLog
===============================================================================

-
    - Added FAQ to documentation
    - Removed outdated schema document
    - Added logchecker.sh.patch (Contributed by Scott Roberts)
    - Moved SGE specific documentation to a separate directory
    - Added host check to shredder when determining which files to process
    - Fixed shredder DSN; MySQL port can now be specified in the config
    - Fixed typos in shredder warning messages
    - Fixed bug in stored procedure used to create timespan aggregate

- 2011-12-20 v0.2.2
    - Minor documentation updates
    - Changed time zone used in shredding process
    - Added support for SGE project tags

- 2011-11-30 v0.2.1
    - Minor documentation updates
    - Removed dependence on Getopt::Long 2.38

- 2011-11-11 v0.2.0
    - Rewrote portal in PHP and shredder in Perl
    - Restructured database
    - Added additional time periods
    - Added support for SGE accounting logs
    - Added Tagging feature
    - Added monthly charts
    - Replaced CPU consumption charts with wall time charts

- 2011-01-25 v0.1.3
    - Fixed PBS log parser to handle job arrays

- 2010-12-17 v0.1.2
    - Fixed typo in pom.xml to include portal source code in src assembly

- 2010-11-11 v0.1.1
    - Fixed bug in shredder to allow for negative wall times.
    - Added jdk15 classifier to pom.xml net.sf.json-lib library

- 2007-11-11 v0.1.0
    - Initial public release
